--- a/ex022d11/index.html
+++ b/ex022d11/index.html
@@ -25,7 +25,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="joaninha">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -59,7 +59,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="papel">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -92,6 +92,6 @@
             Deixe que Deus interprete.
         </p>
     </section>
-    <footer>Site feito por <a href="https://github.com/gustavoguanabara/" class="link">Gustavo Guanabara</a>para o <a href="https://www.youtube.com/@CursoemVideo" class="link">Curso em vídeo</a></footer>
+    <footer>Site feito por <a href="https://github.com/gustavoguanabara/" class="link">Gustavo Guanabara </a>para o <a href="https://www.youtube.com/@CursoemVideo" class="link">Curso em vídeo</a></footer>
 </body>
 </html>
